# ptl

./: .clang-format  .gitmodules  CMakeLists.txt  cmake-variants.yaml
cmake/: FindLibEv.cmake
include/ptl/: aligned_allocator.hpp  bitfield.hpp  compiler.hpp  error.hpp  exceptable.hpp  exception.hpp  expected.hpp  function.hpp  intrusive_ptr.hpp  mpmc_queue.hpp  packed_ptr.hpp  scope_guard.hpp  source_location.hpp  static_string.hpp  synchronize.hpp
include/ptl/asio/: cancellation_state.hpp  descriptor.hpp  io_service.hpp  ip_address.hpp  ip_endpoint.hpp
include/ptl/asio/detail/: io_service_definitions.hpp  io_service_impl.hpp
include/ptl/containers/: bounded_ring_buffer.hpp  intrusive_slist.hpp  list.hpp  slist.hpp
include/ptl/execution/: basic_executor.hpp
include/ptl/experimental/: type_name.hpp
include/ptl/experimental/asio/: cancellation_state.hpp  descriptor.hpp  io_service.hpp  ip_address.hpp  ip_endpoint.hpp  socket.hpp  socket_accept_operation.hpp  socket_connect_operation.hpp  socket_recv_operation.hpp  socket_send_operation.hpp  socket_shutdown_operation.hpp
include/ptl/experimental/asio/detail/: io_service_definitions.hpp  io_service_impl.hpp  socket_operation.hpp
include/ptl/experimental/coroutine/: async_scope.hpp  awaitable_traits.hpp  event.hpp  ordered_scheduler.hpp  simple_task.hpp  sync_wait.hpp  task.hpp  task2.hpp  wait_all.hpp
include/ptl/experimental/coroutine/asio/: cancellation_state.hpp  descriptor.hpp  file.hpp  file_read_operation.hpp  file_write_operation.hpp  io_service.hpp  ip_address.hpp  ip_endpoint.hpp  socket.hpp  socket_accept_operation.hpp  socket_connect_operation.hpp  socket_listen_operation.hpp  socket_recv_operation.hpp  socket_send_operation.hpp  socket_shutdown_operation.hpp
include/ptl/experimental/coroutine/asio/detail/: io_operation.hpp  io_service_definitions.hpp  io_service_impl.hpp  socket_operation.hpp
include/ptl/experimental/coroutine/detail/: is_awaiter.hpp  schedule_awaitable.hpp  wait_all_awaiter.hpp  wait_all_counter.hpp  wait_all_task.hpp
include/ptl/experimental/coroutine/io_service/: descriptor.hpp  io_service.hpp
include/ptl/experimental/coroutine/io_service/detail/: io_operation.hpp  io_service_definitions.hpp  io_service_impl.hpp
include/ptl/experimental/coroutine/process/: process.hpp
include/ptl/experimental/coroutine/scheduling/: thread_pool.hpp
include/ptl/experimental/incomplete/: exclusive_ptr.hpp  sbo.hpp
include/ptl/hash/: fnv1a.hpp
include/ptl/sync/: event.hpp
include/ptl/type_safe/: assert.hpp  crtp.hpp  integer.hpp  strong_type.hpp
include/ptl/type_safe/detail/: integer_checking.hpp
src/: assert.cpp  io_service.cpp  scope_guard.cpp  socket.cpp
test/: CMakeLists.txt  assert_ut.cpp  async_io_ut.cpp  exceptable_ut.cpp  expected_ut.cpp  integer_ut.cpp  io_service_ut.cpp  list_ut.cpp  packed_ptr_ut.cpp  process_ut.cpp  scope_guard_ut.cpp  strong_type_ut.cpp  sync_ut.cpp  task_threading_ut.cpp  task_ut.cpp
