
function(unittest name)
	add_executable(${name} ${name}.cpp)
	if (ENABLE_ASAN)
		target_compile_options(${name} PRIVATE -fsanitize=address)
		target_link_libraries(${name} PRIVATE -static-libsan asan)
	endif()
	target_link_libraries(${name} PUBLIC ptl unittest Threads::Threads)
	target_compile_options(${name} PRIVATE -march=native)
endfunction()

unittest(list_ut)
unittest(integer_ut)
unittest(strong_type_ut)
unittest(scope_guard_ut)
unittest(expected_ut)
unittest(packed_ptr_ut)
unittest(assert_ut)
unittest(io_service_ut)
unittest(exceptable_ut)
unittest(sync_ut)
if (${BUILD_COROUTINE})
	unittest(task_ut)
	unittest(async_io_ut)
endif()